# need_a_job

./: .claude  .claude.json  .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.README.md  .mcp.json.example  .mcp.json.template  .pre-commit-config.yaml  ARCHITECT_REVIEW_STORY_3.2.md  ARCHITECT_REVIEW_STORY_4.1.md  CV_TOOLS_README.md  DASHBOARD_MODERNIZATION_REPORT.md  DISCOVER_JOBS_CODE_SUMMARY.md  DISCOVER_JOBS_FEATURE.md  Dockerfile  GRADIO_TO_VUE3_MIGRATION.md  MAKEFILE_GUIDE.md  Makefile  QA_REPORT_STORY_2_6.md  QA_TEST_SUMMARY.txt  QA_VERIFICATION_STORY_3.2.md  QA_VERIFICATION_STORY_4.1.md  QUICK_REFERENCE_CV_TOOLS.md  QUICK_START.md  README.md  REVIEW_5.2.md  REVIEW_5.2_INDEX.md  REVIEW_5.2_SUMMARY.txt  SETUP_COMPLETE.md  SETUP_GUIDE.md  add_to_claude.sh  check_server.sh  coverage.json  coverage_pending.json  create2.md  create_cv_&_cover.md  create_tailored_application.py  data_engineer_contract_jobs.md  (+17 more)
.bmad-core/: install-manifest.yaml
.bmad-core/agent-teams/: team-all.yaml  team-fullstack.yaml
.bmad-core/agents/: analyst.md  architect.md  bmad-master.md  bmad-orchestrator.md  code-reviewer.md  dev.md  frontend-developer.md  pm.md  po.md  qa.md  sm.md  ux-expert.md
.bmad-core/checklists/: code-review-checklist.md  security-checklist.md
.bmad-core/tasks/: approve-pr.md  review-pr.md  self-healing-ui.md
.bmad-core/workflows/: greenfield-fullstack.yaml  iterative-workflow.yaml
.claude/: settings.local.json
.claude/agents/: database-architect.md  docusaurus-expert.md  frontend-developer.md  mcp-expert.md  test-engineer.md
.claude/commands/: ci-setup.md  ultra-think.md  workflow-orchestrator.md
.claude/scripts/: context-monitor.py
.devcontainer/: Dockerfile  devcontainer.json  kbr5.conf  loader_script.sh  make-completion.sh  requirements.txt
.github/workflows/: docker-build.yml
.playwright-mcp/: cv.html
app/: main.py
app/agents/: __init__.py  application_form_handler.py  base_agent.py  cover_letter_writer_agent.py  cv_tailor_agent.py  email_submission_handler.py  form_handler_agent.py  job_matcher_agent.py  orchestrator_agent.py  qa_agent.py  registry.py  salary_validator_agent.py  web_form_submission_handler.py
app/config/: __init__.py  loader.py  models.py
app/job_queue/: __init__.py  job_queue.py  worker_tasks.py
app/models/: __init__.py  api_requests.py  application.py  job.py
app/pollers/: __init__.py  indeed_poller.py  linkedin_poller.py  seek_poller.py
app/queue/: __init__.py  job_queue.py  redis_client.py  worker_tasks.py
app/repositories/: __init__.py  application_repository.py  database.py  jobs_repository.py
app/services/: approval_mode.py  dashboard_metrics.py  dry_run_mode.py  duplicate_detector.py  email_service.py  fuzzy_matcher.py  job_processor.py  pending_jobs.py  pipeline_metrics.py  playwright_service.py  submission_detector.py
app/ui/: gradio_app.py  websocket.py
config/: agents.yaml  email.yaml  platforms.yaml  search.yaml  similarity.yaml  web_form.yaml
current_cv_coverletter/: Linus_McManamey_CL.docx  Linus_McManamey_CV.docx
docs/: DOCKER_MIGRATION_PLAN.md  DOCKER_QUICKSTART.md  SHELL_COMPLETION.md  architecture.md  prd.md
docs/architecture/: 1-executive-summary.md  10-security-architecture.md  11-quality-attributes.md  12-technology-stack.md  13-implementation-patterns.md  14-appendices.md  2-system-overview.md  3-architecture-principles.md  4-high-level-architecture.md  5-component-architecture.md  6-data-architecture.md  7-agent-architecture.md  8-integration-architecture.md  9-deployment-architecture.md  automated-job-application-system.md  index.md  table-of-contents.md
docs/epics/: epic-1-foundation-summary.md  epic-3-summary.md
docs/prd/: 1-product-overview.md  10-open-questions.md  11-appendices.md  2-core-requirements.md  3-feature-prioritization.md  4-configuration-data.md  5-non-functional-requirements.md  6-technical-constraints.md  7-implementation-roadmap.md  8-success-criteria-acceptance.md  9-risks-mitigations.md  automated-job-application-system.md  epic-1-foundation.md  epic-2-core-agents.md  epic-3-duplicate-detection.md  epic-4-application-submission.md  epic-5-gradio-ui.md  epic-6-testing-refinement.md  epic-7-frontend-modernization.md  executive-summary.md  index.md
docs/qa/: README_STORY_5.3.md  STORY_5.3_QA_SUMMARY.md
docs/qa_reports/: story_5_4_approval_mode_qa_report.md
docs/retrospectives/: 4.2.email-submission-retro.md  5.1.dashboard-metrics-retro.md  5.2.job-pipeline-page-retro.md  5.3.pending-jobs-management-retro.md  5.4.approval-mode-retro.md  5.5.dry-run-mode-retro.md
docs/reviews/: REVIEW_5.2_DETAILS.md
docs/stories/: 1.1.project-setup.md  1.2.configuration-system.md  1.3.duckdb-schema.md  1.4.linkedin-job-poller.md  1.5.job-queue-system.md  2.1.agent-base-class.md  2.2.job-matcher-agent.md  2.3.salary-validator-agent.md  2.4.cv-tailor-agent.md  2.5.cover-letter-writer-agent.md  2.6.qa-agent.md  2.7.orchestrator-agent.md  2.8.form-handler-agent.md  3.1.seek-job-poller.md  3.2.indeed-job-poller.md  3.3.duplicate-group-management.md  4.1.application-form-handler-base.md  4.2.email-submission-handler.md  4.3.web-form-submission.md  5.1.dashboard-metrics.md  5.2.job-pipeline-page.md  5.3.pending-jobs-management.md  5.4.approval-mode.md  5.5.dry-run-mode.md  7.1.vue3-frontend-migration.md  7.2.application-history-search.md
export_cv_cover_letter/: APPLICATION_SUMMARY.md
export_cv_cover_letter/2025-10-16_ntt_data_cloud_pipelines/: Linus_McManamey_CL.docx  (+1 more)
frontend/: .env.development  .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
scripts/: clear_queue.py  docker-entrypoint.sh  healthcheck.sh  init_db.py  monitor_queue.py  retry_failed_jobs.py  run_linkedin_poller.py  run_worker.py  setup_mcp_config.py
second_folder/: APPLICATION_SUMMARY.md
(+133 files in other folders)
